code/labels_as_values.c.c.out
clang: warning: argument unused during compilation: '-L/opt/homebrew/opt/binutils/lib' [-Wunused-command-line-argument]
labels_as_values.c.c:1131:20: error: expected ')'
 1131 |         ;    *p    ;    ++p    ){
      |                    ^
labels_as_values.c.c:1130:8: note: to match this '('
 1130 |     for(    const char* p=ops;
      |        ^
labels_as_values.c.c:1131:28: error: expected ';' after expression
 1131 |         ;    *p    ;    ++p    ){
      |                            ^
      |                            ;
labels_as_values.c.c:1131:27: error: use of undeclared identifier 'p'
 1131 |         ;    *p    ;    ++p    ){
      |                           ^
labels_as_values.c.c:1131:32: error: expected expression
 1131 |         ;    *p    ;    ++p    ){
      |                                ^
labels_as_values.c.c:1131:14: warning: expression result unused [-Wunused-value]
 1131 |         ;    *p    ;    ++p    ){
      |              ^~
1 warning and 4 errors generated.
clang: warning: argument unused during compilation: '-L/opt/homebrew/opt/binutils/lib' [-Wunused-command-line-argument]
labels_as_values.c.c:1131:20: error: expected ')'
 1131 |         ;    *p    ;    ++p    ){
      |                    ^
labels_as_values.c.c:1130:8: note: to match this '('
 1130 |     for(    const char* p=ops;
      |        ^
labels_as_values.c.c:1131:28: error: expected ';' after expression
 1131 |         ;    *p    ;    ++p    ){
      |                            ^
      |                            ;
labels_as_values.c.c:1131:27: error: use of undeclared identifier 'p'
 1131 |         ;    *p    ;    ++p    ){
      |                           ^
labels_as_values.c.c:1131:32: error: expected expression
 1131 |         ;    *p    ;    ++p    ){
      |                                ^
labels_as_values.c.c:1131:14: warning: expression result unused [-Wunused-value]
 1131 |         ;    *p    ;    ++p    ){
      |              ^~
1 warning and 4 errors generated.
